Finishing up CSS and adding links to projects

--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
             <h2>Work</h2>
             <section>
                 <section class="Projectbox Projectbig Project1">
-                    <link href="https://nolacoder.github.io/01-Module-Challenge/">
                     <section>
                         <h3>Horiseon Home Page Refactor</h3>
                         <p>Effecient CSS</p>
+                        <a href="https://nolacoder.github.io/01-Module-Challenge/">See it!</a>
                     </section>
                 </section>
                 <section class="Projectbox Project2">
                     <section>
                         <h3>Bootcamp Study Guide</h3>
                         <p>Applying what I've learned</p>
+                        <a href="https://nolacoder.github.io/prework-study-guide/">See it!</a>
                     </section>
                 </section>
                 <section class="Projectbox Project3">
