Fixed project boxes and changed bio copy

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section>
                 <p>Hello and welcome to my porfolio! After 7 years of testing code, I've decided to get behind the development wheel myself and help to create new software! I believe my testing background will allow me to keep the end user in mind from the beginning of code development.</p>
                 <p>From manual testing to automation, I have helped to support software reaching the finish line with great quality and I am excited to apply that desire for quality as a developer. My keen attention to detail and ability to pick up and retail concepts simple and difficult will help me become a strong contributo in any codebase!</p>
-                <p>Please have a look at my projects below!</p>
+                <p>See some of my projects below!</p>
             </section>
         </article>
         <article class="Work Infobox" id="Work">
