Updated footer link with target attribute

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <nav>
                 <a href="">504-234-0914</a>
                 <a href="mailto:jjohns3@tulane.edu" >jjohns3@tulane.edu</a>
-                <a href="https://github.com/nolacoder">GitHub</a>
+                <a href="https://github.com/nolacoder" target="_blank">GitHub</a>
                 <a href="">Twitter</a>
                 <a href="">Spotify</a>
             </nav>
