Turned projectboxes into links and adjusted CSS to remove projectbox background images

--- a/index.html
+++ b/index.html
@@ -36,36 +36,47 @@
             <h2>Work</h2>
             <section>
                 <section class="Projectbox Projectbig Project1">
-                    <section>
-                        <h3>Horiseon Home Page Refactor</h3>
-                        <p>Effecient CSS</p>
-                        <a href="https://nolacoder.github.io/01-Module-Challenge/">See it!</a>
-                    </section>
+                    <a href="https://nolacoder.github.io/01-Module-Challenge/" target="_blank">
+                        <img src="./assets/img/Horiseon refactor.png" alt="Image of Horiseon Home Page">
+                        <section>
+                            <h3>Horiseon Home Page Refactor</h3>
+                            <p>Effecient CSS</p>
+                        </section>
+                    </a>
+                    
                 </section>
                 <section class="Projectbox Project2">
-                    <section>
-                        <h3>Bootcamp Study Guide</h3>
-                        <p>Applying what I've learned</p>
-                        <a href="https://nolacoder.github.io/prework-study-guide/">See it!</a>
-                    </section>
+                    <a href="https://nolacoder.github.io/prework-study-guide/" target="_blank">
+                        <img src="./assets/img/Study guide.png" alt="Image of Study Guide webpage">
+                        <section>
+                            <h3>Bootcamp Study Guide</h3>
+                            <p>Applying what I've learned</p>
+                        </section>
+                    </a>
                 </section>
                 <section class="Projectbox Project3">
-                    <section>
-                        <h3>Coming soon!</h3>
-                        <p></p>
-                    </section>
+                    <a href="#Work"> 
+                        <img src="https://placehold.jp/300x300.png" alt="300 x 300 placeholder image">
+                        <section>
+                            <h3>Coming soon!</h3>
+                        </section>
+                    </a>
                 </section>
                 <section class="Projectbox Project4">
-                    <section>
-                        <h3>Coming soon!</h3>
-                        <p></p>
-                    </section>
+                    <a href="#Work"> 
+                        <img src="https://placehold.jp/300x300.png" alt="300 x 300 placeholder image">
+                        <section>
+                            <h3>Coming soon!</h3>
+                        </section>
+                    </a>
                 </section>
                 <section class="Projectbox Project5">
-                    <section>
-                        <h3>Coming soon!</h3>
-                        <p></p>
-                    </section>
+                    <a href="#Work"> 
+                        <img src="https://placehold.jp/300x300.png" alt="300 x 300 placeholder image">
+                        <section>
+                            <h3>Coming soon!</h3>
+                        </section>
+                    </a>
                 </section>
             </section>
         </article>
