Adding comments to CSS and HTML

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h2>Work</h2>
             <section>
                 <section class="Projectbox Projectbig Project1">
+                    <!-- The contents of each "Projectbox is wrapped in an achor tag, making the whole thing clickable" -->
                     <a href="https://nolacoder.github.io/01-Module-Challenge/" target="_blank">
                         <img src="./assets/img/Horiseon refactor.png" alt="Image of Horiseon Home Page">
                         <section>
