added in Couch Potato app

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                     </a>
                 </section>
                 <section class="Projectbox Project3">
-                    <a href="#Work"> 
-                        <img src="https://placehold.jp/300x300.png" alt="300 x 300 placeholder image">
+                    <a href="https://infinite-river-93616.herokuapp.com/"> 
+                        <img src="./assets/img/Couch-Potato.png" alt="Image of Couch Potato app">
                         <section>
-                            <h3>Coming soon!</h3>
+                            <h3>Couch Potato</h3>
+                            <p>Interactive movie database</p>
                         </section>
                     </a>
                 </section>
