made new link open on new tab

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </a>
                 </section>
                 <section class="Projectbox Project3">
-                    <a href="https://infinite-river-93616.herokuapp.com/"> 
+                    <a href="https://infinite-river-93616.herokuapp.com/" target="_blank"> 
                         <img src="./assets/img/Couch-Potato.png" alt="Image of Couch Potato app">
                         <section>
                             <h3>Couch Potato</h3>
