added new portfolia projects

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <section>
                 <section class="Projectbox Projectbig Project1">
                     <!-- The contents of each "Projectbox is wrapped in an achor tag, making the whole thing clickable" -->
-                    <a href="https://nolacoder.github.io/01-Module-Challenge/" target="_blank">
-                        <img src="./assets/img/Horiseon refactor.png" alt="Image of Horiseon Home Page">
+                    <a href="https://infinite-river-93616.herokuapp.com/" target="_blank"> 
+                        <img src="./assets/img/Couch-Potato.png" alt="Image of Couch Potato app">
                         <section>
-                            <h3>Horiseon Home Page Refactor</h3>
-                            <p>Effecient CSS</p>
+                            <h3>Couch Potato</h3>
+                            <p>Interactive movie database!</p>
                         </section>
                     </a>
                     
@@ -51,32 +51,34 @@
                         <img src="./assets/img/Study guide.png" alt="Image of Study Guide webpage">
                         <section>
                             <h3>Bootcamp Study Guide</h3>
-                            <p>Applying what I've learned</p>
+                            <p>Applying what I've learned!</p>
                         </section>
                     </a>
                 </section>
                 <section class="Projectbox Project3">
-                    <a href="https://infinite-river-93616.herokuapp.com/" target="_blank"> 
-                        <img src="./assets/img/Couch-Potato.png" alt="Image of Couch Potato app">
+                    <a href="https://nolacoder.github.io/Best-Artist-Search-Ever/" target="_blank"> 
+                        <img src="./assets/img/Best Artist Search Ever.png" alt="Image of Best Artist Search Ever app">
                         <section>
-                            <h3>Couch Potato</h3>
-                            <p>Interactive movie database</p>
+                            <h3>Best Artist Search Ever</h3>
+                            <p>Search engine for artwork!</p>
                         </section>
                     </a>
                 </section>
                 <section class="Projectbox Project4">
-                    <a href="#Work"> 
-                        <img src="https://placehold.jp/300x300.png" alt="300 x 300 placeholder image">
+                    <a href="https://nolacoder.github.io/Weather-App/" target="_blank"> 
+                        <img src="./assets/img/Weather app.png" alt="Image of Weather App">
                         <section>
-                            <h3>Coming soon!</h3>
+                            <h3>Weather App</h3>
+                            <p>Get current and future weather for any city!</p>
                         </section>
                     </a>
                 </section>
                 <section class="Projectbox Project5">
-                    <a href="#Work"> 
-                        <img src="https://placehold.jp/300x300.png" alt="300 x 300 placeholder image">
+                    <a href="https://nolacoder.github.io/01-Module-Challenge/" target="_blank"> 
+                        <img src="./assets/img/Horiseon refactor.png" alt="Image of Horiseon Home Page">
                         <section>
-                            <h3>Coming soon!</h3>
+                            <h3>Horiseon Home Page Refactor</h3>
+                            <p>Effecient CSS!</p>
                         </section>
                     </a>
                 </section>
