Resume link fix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#About-Me">About Me</a>
             <a href="#Work">Work</a>
             <a href="#Contact-Me">Contact Me</a>
-            <a href="">Resume</a>
+            <a href="https://docs.google.com/document/d/1p_4X0p3j9fx6Eo-koN7u7Hrsyx1sVyVK7d1kcbVvIJ4/edit" target="_blank">Resume</a>
         </nav>
     </header>
     <section class="Background-Image">
